tests/examples/good/misc/good009.lat
int main() {
    int a, b;
    a = 0; b = 1;
    a = 42;
    printInt(a*b);
    printInt(a*10);
    printInt(10*a);
    printInt(a*b);

    printInt(a+b);
    printInt(a-b);

    string s1 = "a", s2 = "b";
    printString(s1+s2);
    return 0;
}
