tests/examples/bad/function_arg_duplicate.lat
int main() {
    return 0;
}

int f(int a, int a) {
    return 1;
}